CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(CMJFS VERSION 0.1)

# 禁止源码树内构建
IF ("${PROJECT_SOURCE_DIR}" STREQUAL "${PROJECT_BINARY_DIR}")
    MESSAGE(FATAL_ERROR "Do not build in-source")
ENDIF()

# 全局编译配置
if(MSVC)
    ADD_COMPILE_OPTIONS(/W4 /source-charset:UTF-8)
else()
    ADD_COMPILE_OPTIONS(-Wall -Wextra -Werror -pedantic)
endif()
ADD_DEFINITIONS(-DUNICODE)
ADD_DEFINITIONS(-D_UNICODE)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_C_STANDARD_REQUIRED ON)

# 指定源码
FILE(GLOB_RECURSE SRCS "src/*.c")
# 指定可执行文件编译
ADD_EXECUTABLE("${PROJECT_NAME}" "${SRCS}")
# 指定包含目录
TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}" PUBLIC "include")
